--- a/Explore/BulkUnlinkTestProj2/.BulkUnlink_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj2/.BulkUnlink_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "lEI45mPZ0wCkgBC8dzb3i3",
+    "id" : "2wWgW6vW3RbgoGpL0oTWyy",
     "name" : "BulkUnlink_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01026R170000000000O3"
+        "repoHandle" : "01026R170000000000SO"
       },
       "contextAttributes" : [ {
         "name" : "id",
