--- a/Explore/BulkUnlinkTestProj3/BulkUnlink_FOLDER/.BulkUnlink_LTF_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj3/BulkUnlink_FOLDER/.BulkUnlink_LTF_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "4ih4NTttMGXkLgYDedvmKc",
+    "id" : "69NpUh1ebvqdjsCmunDwco",
     "name" : "BulkUnlink_LTF_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01026R170000000000O2"
+        "repoHandle" : "01026R170000000000SK"
       },
       "contextAttributes" : [ {
         "name" : "id",
