--- a/Explore/BulkUnlinkTestProj1/.BulkUnlink_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj1/.BulkUnlink_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "9srwQ3vWFcZj21j0V5CFSV",
+    "id" : "3Zezy8KJb7nljpwWdQW9Oz",
     "name" : "BulkUnlink_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01026R170000000000O4"
+        "repoHandle" : "01026R170000000000SN"
       },
       "contextAttributes" : [ {
         "name" : "id",
