--- a/Explore/BulkUnlinkTestProj1/BulkUnlink_FOLDER/.BulkUnlink_LTF_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj1/BulkUnlink_FOLDER/.BulkUnlink_LTF_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "2TjJLbyuA0yfChsvNffiap",
+    "id" : "007shjLi4KMdS06RuC5Nek",
     "name" : "BulkUnlink_LTF_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01026R170000000000O0"
+        "repoHandle" : "01026R170000000000SJ"
       },
       "contextAttributes" : [ {
         "name" : "id",
