--- a/Explore/BulkUnlinkTestProj3/.BulkUnlink_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj3/.BulkUnlink_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "cLjdPhia9akeHJa4L51N6g",
+    "id" : "9aVDGejL6PCeR4pfrIq5EV",
     "name" : "BulkUnlink_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01026R170000000000O5"
+        "repoHandle" : "01026R170000000000SM"
       },
       "contextAttributes" : [ {
         "name" : "id",
