--- a/Explore/BulkUnlinkTestProj2/.BulkUnlink_Mapping_SQL_FF_1.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj2/.BulkUnlink_Mapping_SQL_FF_1.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "4Sr7QxZvdgafmzTmeklmI1",
+    "id" : "2aWG61k1Xs3gOuIrKvdH21",
     "name" : "BulkUnlink_Mapping_SQL_FF_1",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01026R170000000000SP"
+        "repoHandle" : "01026R170000000000TN"
       },
       "contextAttributes" : [ {
         "name" : "id",
