--- a/Explore/BulkUnlinkTestProj1/.BulkUnlink_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj1/.BulkUnlink_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "3Zezy8KJb7nljpwWdQW9Oz",
+    "id" : "azlx6CakNO2cVNQQLsazaF",
     "name" : "BulkUnlink_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01026R170000000000SN"
+        "repoHandle" : "01026R170000000000TL"
       },
       "contextAttributes" : [ {
         "name" : "id",
