--- a/Explore/BulkUnlinkTestProj2/BulkUnlink_FOLDER/.BulkUnlink_LTF_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj2/BulkUnlink_FOLDER/.BulkUnlink_LTF_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "3e48Skaj3GIidXFl78uYiP",
+    "id" : "356spzeSx8Pf0pTzrqzseb",
     "name" : "BulkUnlink_LTF_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01026R170000000000SH"
+        "repoHandle" : "01026R170000000000TF"
       },
       "contextAttributes" : [ {
         "name" : "id",
