Multi checkin assets
Description for Multi checkin assets

--- a/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
+++ b/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "jMOulJM8zEAhvA9IMomO0Y",
+    "id" : "edg1OGshJmmdwljpLeLO8H",
     "name" : "VCS_DisableVersioningTest",
     "type" : "Project",
     "metadata" : {
