--- a/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
+++ b/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "edg1OGshJmmdwljpLeLO8H",
+    "id" : "6LM5x2hd3yjinzX7Z6c3Yl",
     "name" : "VCS_DisableVersioningTest",
     "type" : "Project",
     "metadata" : {
