Automation summary for Force Undo Checkout testsYmYwNmZhYWMtMWVmZC00MW
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "90VcnX4KFwFdQITodCOQYy",
+    "id" : "6j0o9zkIti2ifLNqx2UPoq",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
