Multi checkin assets
Description for Multi checkin assets

--- a/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
+++ b/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "6LM5x2hd3yjinzX7Z6c3Yl",
+    "id" : "l3VqxP9V8g6fk2Rkt30qyM",
     "name" : "VCS_DisableVersioningTest",
     "type" : "Project",
     "metadata" : {
