Automation summary for Force Undo Checkout testsYTYzYzYyNTMtNDI5OS00ND
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "jNEUr60Zq0ul5ic3eTgeM7",
+    "id" : "7hsGncW2q06jG6e3aNvU4I",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
