Automation summary for Force Undo Checkout testsZDE3ZGY3NmUtMTA4Zi00Nj
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "7hsGncW2q06jG6e3aNvU4I",
+    "id" : "2LBPOCiIFAueQCeRgIAs0a",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
