Automation summary for Force Undo Checkout testsMTk2MGY4OGEtZjhkZS00Nz
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "2LBPOCiIFAueQCeRgIAs0a",
+    "id" : "jNEUr60Zq0ul5ic3eTgeM7",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
